@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	 xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+         xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.unigrid.janus</groupId>
 	<artifactId>desktop</artifactId>
@@ -10,16 +10,21 @@
 	<parent>
 		<groupId>org.unigrid.janus</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.0.5-SNAPSHOT</version>
+		<version>1.0.7-SNAPSHOT</version>
 	</parent>
 	<properties>
 		<mainClass>org.unigrid.janus.Janus</mainClass>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
+		<!--<dependency>
+		    <groupId>org.unigrid.janus</groupId>
+		    <artifactId>fx</artifactId>
+		    <version>${project.version}</version>
+		</dependency>-->
 		<dependency>
-			<groupId>org.unigrid.janus</groupId>
-			<artifactId>fx</artifactId>
+			<groupId>org.unigrid</groupId>
+			<artifactId>bootstrap</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
@@ -29,6 +34,23 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 			</plugin>
+			<!--<plugin>
+			    <groupId>org.tentackle</groupId>
+			    <artifactId>tentackle-jlink-maven-plugin</artifactId>
+			    <version>17.9.0.0</version>
+			    <extensions>true</extensions>
+			    <configuration>
+				<verbosity>debug</verbosity>
+				<mainClass>org.unigrid.janus.Janus</mainClass>
+				<mainModule>fx</mainModule>
+				<templateDir>src/main/templates</templateDir>
+				<stripDebug>false</stripDebug>
+				<excludeModules>jdk.jfr</excludeModules>
+				<variables>
+				    <images>${project.build.directory}/classes/org/unigrid/janus/view/images</images>
+				</variables>
+			    </configuration>
+			</plugin>-->
 			<plugin>
 				<groupId>org.tentackle</groupId>
 				<artifactId>tentackle-jlink-maven-plugin</artifactId>
@@ -36,8 +58,10 @@
 				<extensions>true</extensions>
 				<configuration>
 					<verbosity>debug</verbosity>
-					<mainClass>org.unigrid.janus.Janus</mainClass>
-					<mainModule>fx</mainModule>
+					<mainClass>org.unigrid.bootstrap.App</mainClass>
+					<mainModule>org.unigrid.bootstrap</mainModule>
+					<addModules>jdk.crypto.ec</addModules>
+					<addModules>java.compiler</addModules>
 					<templateDir>src/main/templates</templateDir>
 					<stripDebug>false</stripDebug>
 					<excludeModules>jdk.jfr</excludeModules>
@@ -47,21 +71,21 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>com.coderplus.maven.plugins</groupId>
-				<artifactId>copy-rename-maven-plugin</artifactId>
-				<version>1.0.1</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>rename</goal>
-						</goals>
-						<configuration>
-							<sourceFile>target/jlink/mp</sourceFile>
-							<destinationFile>target/mp</destinationFile>
-						</configuration>
-					</execution>
-				</executions>
+			    <groupId>com.coderplus.maven.plugins</groupId>
+			    <artifactId>copy-rename-maven-plugin</artifactId>
+			    <version>1.0.1</version>
+			    <executions>
+				<execution>
+				    <phase>package</phase>
+				    <goals>
+					<goal>rename</goal>
+				    </goals>
+				    <configuration>
+					<sourceFile>target/jlink/mp</sourceFile>
+					<destinationFile>target/mp</destinationFile>
+				    </configuration>
+				</execution>
+			    </executions>
 			</plugin>
 			<plugin>
 				<groupId>org.panteleyev</groupId>
@@ -75,20 +99,18 @@
 							<goal>jpackage</goal>
 						</goals>
 						<configuration>
-							<appVersion>1.0.5</appVersion>
+							<appVersion>1.0.7</appVersion>
 							<vendor>org.unigrid</vendor>
-							<module>fx/org.unigrid.janus.Janus</module>
-							<modulePaths>
-								<modulePath>target/mp</modulePath>
-							</modulePaths>
+							<module>org.unigrid.bootstrap/org.unigrid.bootstrap.App</module>
+                                                        <modulePaths>
+                                                            <modulePath>target/mp</modulePath>
+                                                        </modulePaths>
 							<runtimeImage>target/jlink</runtimeImage>
 							<type>APP_IMAGE</type>
-                            <winConsole>false</winConsole>
+							<winConsole>false</winConsole>
 							<javaOptions>
 								<option>--add-opens</option>
 								<option>java.base/java.lang=ALL-UNNAMED</option>
-								<option>--add-opens</option>
-								<option>java.base/java.lang=weld.core.impl</option>
 								<option>-DAPPDIR=$APPDIR</option>
 								<option>-DAPPVER=${project.version}</option>
 							</javaOptions>
@@ -100,7 +122,7 @@
 							<goal>jpackage</goal>
 						</goals>
 						<configuration>
-                            <appVersion>1.0.5</appVersion>
+							<appVersion>1.0.7</appVersion>
 							<appImage>target/dist/Unigrid</appImage>
 						</configuration>
 					</execution>
@@ -215,10 +237,10 @@
 								<configuration>
 									<type>DEB</type>
 									<linuxShortcut>true</linuxShortcut>
-									<linuxPackageName>janus</linuxPackageName>
+									<linuxPackageName>unigrid</linuxPackageName>
 									<linuxAppCategory>Utilities</linuxAppCategory>
 									<linuxMenuGroup>Utilities</linuxMenuGroup>
-                                                                        <icon>${project.basedir}/../fx/src/main/resources/org/unigrid/janus/view/images/unigrid-1024x1024.png</icon>
+									<icon>${project.basedir}/../fx/src/main/resources/org/unigrid/janus/view/images/unigrid-1024x1024.png</icon>
 								</configuration>
 							</execution>
 						</executions>
